# beehiveiot-localcontrollers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
ci/ut_x86_64/: runCMake.sh  runCTest.sh  runMake.sh
cmake/: FetchAndInitializeCMocka.cmake  FetchAndInitializePicoSdk.cmake  ParseOptions.cmake  SdkVersion.cmake
development/: CMakeLists.txt
development/flashcontent/: CMakeLists.txt  main.c
development/helloworld/: CMakeLists.txt  main.c
scripts/: buildAndRunUT.sh  buildDevelopmentBinariesForTarget.sh  buildForTarget.sh
src/peripheries/: CMakeLists.txt
stub/: CMakeLists.txt
test/ut/: CMakeLists.txt  DummyTest.c
